--- a/css/style.css
+++ b/css/style.css
@@ -927,7 +927,7 @@ h4.card-teacher-title {
 }
 
 /*4 секция Как проходят занятия*/
-.section-four {
+.section-four-title {
   margin-left: 60px;
 }
 
@@ -1117,7 +1117,12 @@ ul.section-four-text>li {
 .section-six-text-second {
   margin-top: 40px;
 }
-
+.section-six-button-second, .section-six-text-second { 
+  display: block;
+}
+.section-six-button-one, .section-six-text-one { 
+  display: none;
+}
 /*7 секция Почему надо заниматься у нас*/
 .seven-section-dop-icons {
   height: 0;
@@ -1727,7 +1732,7 @@ h1 {
 
 /*адаптив до 960*/
 
-@media (max-width: 960px) {
+@media (max-width: 959.5px) {
 .one-section{
   justify-content: center !important;
        align-items: center !important;
@@ -1768,12 +1773,20 @@ h1 {
 .trend-nav {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  margin-left: 30px;
 }
+ul.trend-nav>li {
+  min-width: 49%;
+    margin-right: 0;
+}
+ 
 .two-section-img5 {
   left: 80%;
   top: 900px;
 }
+
+
 .trend-nav-item>ul>li>ul {
   display: flex;
   flex-wrap: wrap;
@@ -1782,4 +1795,220 @@ h1 {
 .trend-nav-item>ul>li>h4 {
   text-align: center;
 }
+
+.section-four{
+  flex-direction: column-reverse;
+  align-items: center;
+}
+.section-four-title {
+   margin-left: 0;  
+   margin: 0 auto;
+}
+.section-four-text {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+ul.section-four-text>li {
+  line-height: 30px;
+  padding-bottom: 10px;
+}
+.section-four > div > img {
+  max-width: 95%;
+  padding-left: 10%;
+
+}
+.section-four > div {
+padding: 40px 0;
+}
+.section-five-title {
+  max-width: none; 
+  text-align: center;
+}
+.section-five-text {
+  max-width: none; 
+  line-height: 28px;
+  text-align: center;
+  padding: 0 100px;
+}
+.section-five-stages {
+  max-width: 80%; 
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  align-items: center;
+  /* align-content: center; */
+  margin: 0 auto;
+  /* padding-left: 40px; */
+}
+.section-five-stages > div {
+  margin-bottom: 0px !important;
+  width: 50%;
+  min-height: 100px;
+}
+.section-five-stages>div>span {
+  top: -5px;
+}
+.five-section-img1 {
+  left: 87%;
+}
+.five-section-img3 {
+  left: 11%;
+}
+.five-section-img4 {
+  left: 5%;
+}
+.five-section-img2 {
+  left: 80%;
+  top: 956px;
+}
+.five-section-img6 {
+  left: 79%;
+}
+.section-five-form {
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.header-logo {
+  max-width: 132px;
+  padding-top: 17px;
+}
+.section-six {
+  flex-direction: column-reverse;
+}
+ 
+.section-six-one > img{
+  padding: 0 10%;
+}
+.section-six-second h3, .section-six-title-second {
+  text-align: center;
+  padding: 0 20%;
+}
+.section-six-title-second {
+  max-width: 100%;
+}
+.section-six-second {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.section-six-text-second{
+  text-align: center;
+  padding: 0 20%;
+}
+.section-six-button-second, .section-six-text-second { 
+  display: none;
+}
+.section-six-button-one, .section-six-text-one { 
+  display: block;
+  margin-top: 50px !important;
+}
+.section-six-button-one {
+  margin: 0 auto;
+}
+.section-six-text-one  {
+  margin: 0 auto;
+  padding: 0 20%;
+  text-align: center;
+}
+.seven-section {
+  margin-bottom: -1343px;
+  margin-top: -90px;
+  padding: 0 10%;
+
+}
+.seven-section-block {
+  min-height: 1050px;
+}
+.seven-section-block-content {
+  max-width: 100%;
+}
+.seven-section-block h3, .seven-section-block p {
+  margin-bottom: 30px;
+}
+.seven-section-img {
+  left: 33%;
+  bottom: 700px;
+}
+.seven-section-margin-mobile{
+  margin-bottom: 250px;
+}
+.seven-section-block-sertificat {
+  bottom: -811px;
+  max-width: 70%;
+  left: 15%;
+}
+.section-block-button {
+  left: 45%;
+  bottom: 560px;
+}
+.seven-section-img2 {
+  left: 58%;
+  top: -147px;
+}
+.seven-section-img1 {
+  top: 700px;
+  left: 80%;
+}
+.seven-section-img3 {
+  left: 69px;
+  top: 800px;
+}
+.section-nine {
+  background-size: 145%;
+  min-height:880px;
+  margin: 0 10%;
+  max-height: none;
+}
+.section-nine {
+  background-position: 150% 100%;
+  background-size: 98%;
+  background-image: url("../images/Беслатное-занятие-фон2.png");
+ 
+}
+.position-nine-button {
+  left: 45%;
+    bottom: -37px;
+}
+.section-ten {
+  display: flex;
+  flex-direction: column-reverse;
+  align-content: center;
+  align-items: center;
+}
+}
+
+
+
+/*адаптив до 959*/
+
+@media (max-width: 959.5px) {
+  ul.teachers > li {
+    padding: 0 20%;
+  }
+  .card-teacher-content>.uk-card-badge {
+    left: 270px;
+}
+  .uk-position-center-left-out {
+    right: 80%;
+    top: 380px;
+  }
+  .teacher-arrow.uk-position-center-right-out {
+    top: 380px;
+    left: 80%;
+  }
+}
+
+
+/*адаптив до 820*/
+
+@media (max-width: 820px) {
+  ul.teachers > li {
+    
+  }
+  .seven-section-margin-mobile{
+    margin-bottom: 300px;
+  }
 }
