--- a/css/style.css
+++ b/css/style.css
@@ -2312,7 +2312,7 @@ h3 {
   border: 2px solid #F8F8F8;
 }
 .trend-nav {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 ul.trend-nav>li {
   min-width: 48%;
@@ -2370,6 +2370,68 @@ h4.card-teacher-title {
   font-size: 20px;
   line-height: 20px;
 }
+.section-four-title > h3 {
+  text-align: center !important;
+}
+.section-four-title {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.section-four > div {
+  padding: 0px 0;
+}
+.section-four-text {
+  margin-top: 15px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+ul.section-four-text>li {
+  line-height: 20px;
+  font-size: 20px;
+  padding-bottom: 17px;
+}
+.section-five-text {
+  line-height: 24px;
+  text-align: center;
+  padding: 0 16px;
+  font-size: 16px;
+}
+.section-five-title {
+  margin-bottom: 25px;
+}
+
+.five-section-img3 {
+  left: 4%;
+}
+.five-section-img1 {
+  left: 87%;
+}
+.five-section-img4 {
+  left: 0%;
+}
+.section-five-stages {
+  max-width: 100%;
+}
+.section-five-stages>div>span {
+  font-size: 28px;
+  top: -9px;
+}
+.section-five-stages>div {
+  flex-wrap: nowrap;
+  width: 100%;
+  min-height: 25px;
+}
+.section-five-form>fieldset>legend {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 28px;
+  
+}
 }
 
 /*адаптив до 631*/
@@ -2399,10 +2461,16 @@ h4.card-teacher-title {
 /*адаптив до 461*/
 
 @media (max-width: 461px) {
+  .header {
+    padding: 0 15px;
+}
   ul.trend-nav>li {
     min-width: 100%;
     margin-right: 0px;
     max-width: none; 
+}
+.trend-nav {
+  margin-left: 20px;
 }
 .trend-nav-item>ul>li>ul>li {
   min-width: 100%;
